[package]
name = "solana-merkle-tree"
version = "1.6.0"
description = "Solana Merkle Tree"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
fast-math = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
solana-sdk = { path = "../sdk", version = "1.6.0", default-features = false, features = ["wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
solana-sdk = { path = "../sdk", version = "1.6.0" }

[dev-dependencies]
hex = "0.4.2"

[lib]
crate-type = ["lib"]
name = "solana_merkle_tree"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
