[package]
name = "solana-config-program"
version = "1.6.0"
description = "Solana Config program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"
resolver = "2"

[dependencies]
bincode = "1.3.1"
chrono = { version = "0.4.11", features = ["serde"] }
log = "0.4.11"
serde = "1.0.122"
serde_derive = "1.0.103"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
solana-sdk = { path = "../../sdk" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
solana-sdk = { path = "../../sdk", version = "1.6.0", default-features = false, features = ["wasm-bindgen"] }

[dev-dependencies]
solana-logger = { path = "../../logger", version = "1.6.0" }

[lib]
crate-type = ["lib"]
name = "solana_config_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
