[package]
name = "solana-vote-program"
version = "1.6.0"
description = "Solana Vote program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"
resolver = "2"

[dependencies]
bincode = "1.3.1"
log = "0.4.11"
num-derive = "0.3"
num-traits = "0.2"
serde = "1.0.122"
serde_derive = "1.0.103"
solana-logger = { path = "../../logger", version = "1.6.0" }
thiserror = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
solana-sdk = { path = "../../sdk", version = "1.6.0", default-features = false, features = ["wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
solana-frozen-abi = { path = "../../frozen-abi", version = "1.6.0" }
solana-frozen-abi-macro = { path = "../../frozen-abi/macro", version = "1.6.0" }
solana-sdk = { path = "../../sdk", version = "1.6.0"}
solana-metrics = { path = "../../metrics", version = "1.6.0" }

[build-dependencies]
rustc_version = "0.2"

[lib]
crate-type = ["lib"]
name = "solana_vote_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
